# integrate-airtable-and-flask

./: .djlintrc  .env.sample  .gitignore  .pylintrc  Airtable.py  README.md  app.py  entrypoint.py  format.sh  gunicorn-conf.py  lint.sh  pyproject.toml  requirements.txt  run.ps1  run.sh  vercel.json
app/: airtable.py  constants.py  main.py
app/templates/: base.html
app/templates/pages/: 404.html  index.html  success.html
app/templates/snippits/: footer.html  form.html  header.html
scripts/: run.sh
templates/: alerts.html  base.html  error.html  form.html  index.html  main.html  success.html
